flux/infrastructure/tekton/config/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: tekton-pipelines-authentik-auth@kubernetescrd
spec:
  ingressClassName: traefik-internal
  rules:
    - host: tekton.dev.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
